# Interpolation_IITP

./: .coverage  LICENSE  README.md  noxfile.py  pyproject.toml  test_reqs.txt
.pytest_cache/v/cache/: nodeids
examples/: run_1d_interpolation_example.py  run_2d_interpolation_example.py  run_image_interpolation_example.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_395ba985ee47c5ac_Interpolation_1D_Methods_py.html  z_395ba985ee47c5ac_Interpolation_2D_Methods_py.html  z_395ba985ee47c5ac___init___py.html  z_395ba985ee47c5ac_cli_py.html  z_395ba985ee47c5ac_image_processing_py.html
source/interpolation_lib/: Interpolation_2D_Methods.py  cli.py  image_processing.py
source/interpolation_package/: interpolation_algorithms.py
src/interpolation_lib/: Interpolation_1D_Methods.py  Interpolation_2D_Methods.py  cli.py  image_processing.py
tests/: test_cli.py  test_interpolation_1d.py  test_interpolation_2d.py
